fix: update process borders to fix small pixel shift

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -827,6 +827,7 @@ body:not(.dark) .service:hover{
     border-radius: 16px;
     cursor: pointer;
     transition: all 0.2s ease;
+    border: var(--bg-dark) solid 1px;
 }
 
 .processStep * {
